[gd_scene load_steps=11 format=3 uid="uid://bmro2ygxwswx2"]

[ext_resource type="Script" path="res://scripts/gambit.gd" id="1_vmmg1"]
[ext_resource type="Texture2D" uid="uid://cxq4rjjdufbyc" path="res://assets/sprites/grey-and-white-checkerboard-pattern_thumb.jpg" id="3_3i41l"]
[ext_resource type="Script" path="res://scripts/scrolling.gd" id="4_y81i0"]
[ext_resource type="Theme" uid="uid://b5i2s2wgetsyw" path="res://assets/base_theme.tres" id="5_odow0"]
[ext_resource type="Theme" uid="uid://biufirpv8wudy" path="res://assets/instruction_theme.tres" id="6_aq87x"]
[ext_resource type="Texture2D" uid="uid://cpwk852s6rdsn" path="res://assets/sprites/ui/button_blank_black.png" id="7_qt2hx"]
[ext_resource type="Texture2D" uid="uid://cx5uvxekqmydp" path="res://assets/sprites/ui/button_blank_black_pressed.png" id="8_ix4m6"]
[ext_resource type="Texture2D" uid="uid://bk7opscjjinlk" path="res://assets/sprites/ui/button_start_black.png" id="9_tlx5v"]
[ext_resource type="Texture2D" uid="uid://cgiqyuowskg8k" path="res://assets/sprites/freewrite/fw_jester_red1.png" id="10_nhpvw"]
[ext_resource type="Texture2D" uid="uid://cj7jjhry6ru8l" path="res://assets/sprites/ui/button_start_black_pressed.png" id="10_sfa8f"]

[node name="Gambit" type="Node2D"]
texture_filter = 1
script = ExtResource("1_vmmg1")

[node name="Camera2D" type="Camera2D" parent="."]
limit_left = 0
limit_top = 0
position_smoothing_enabled = true
position_smoothing_speed = 6.0

[node name="BottomUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Background" type="TextureRect" parent="BottomUI"]
self_modulate = Color(0.478431, 0.478431, 0.478431, 1)
layout_mode = 0
offset_left = -4000.0
offset_top = -3000.0
offset_right = -674.0
offset_bottom = -652.0
scale = Vector2(2, 2)
texture = ExtResource("3_3i41l")
stretch_mode = 1
script = ExtResource("4_y81i0")

[node name="nameText" type="RichTextLabel" parent="BottomUI"]
layout_mode = 0
offset_left = 34.0
offset_top = 708.0
offset_right = 582.0
offset_bottom = 741.0
mouse_filter = 2
mouse_default_cursor_shape = 2
theme = ExtResource("5_odow0")
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "[center]the joke is...[/center]"
fit_content = true

[node name="nameText2" type="RichTextLabel" parent="BottomUI"]
layout_mode = 0
offset_left = 34.0
offset_top = 732.0
offset_right = 582.0
offset_bottom = 955.0
mouse_filter = 2
mouse_default_cursor_shape = 2
theme = ExtResource("6_aq87x")
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "[center]...up to you, my Liege.[/center]"

[node name="input" type="LineEdit" parent="BottomUI"]
layout_mode = 0
offset_left = 34.0
offset_top = 955.0
offset_right = 582.0
offset_bottom = 1004.0
mouse_filter = 2
mouse_default_cursor_shape = 2
theme = ExtResource("6_aq87x")
max_length = 32
caret_blink = true

[node name="finishButton" type="TextureButton" parent="BottomUI"]
layout_mode = 0
offset_left = 200.0
offset_top = 1064.0
offset_right = 328.0
offset_bottom = 1104.0
scale = Vector2(2, 2)
focus_mode = 1
texture_normal = ExtResource("7_qt2hx")
texture_pressed = ExtResource("8_ix4m6")

[node name="helpText" type="RichTextLabel" parent="BottomUI/finishButton"]
layout_mode = 0
offset_left = 15.5
offset_top = 7.0
offset_right = 115.5
offset_bottom = 28.0
mouse_filter = 2
mouse_default_cursor_shape = 2
theme = ExtResource("6_aq87x")
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "[pulse freq=0.4 color=#000000 ease=-1.0]finish"
fit_content = true

[node name="TopUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Background" type="ColorRect" parent="TopUI"]
self_modulate = Color(0.458824, 0.458824, 0.458824, 1)
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 1)

[node name="nameText" type="RichTextLabel" parent="TopUI"]
layout_mode = 0
offset_left = 420.0
offset_top = 61.0
offset_right = 717.0
offset_bottom = 157.0
mouse_filter = 2
mouse_default_cursor_shape = 2
theme = ExtResource("6_aq87x")
theme_override_font_sizes/normal_font_size = 48
bbcode_enabled = true
text = "[center]Player 1[/center]"
fit_content = true

[node name="instructions" type="RichTextLabel" parent="TopUI"]
layout_mode = 0
offset_left = 334.0
offset_top = 207.0
offset_right = 838.0
offset_bottom = 396.0
mouse_filter = 2
mouse_default_cursor_shape = 2
theme = ExtResource("6_aq87x")
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "You, the King, are to give a prompt to the jesters. They will continue your decree. You will choose the most amusing response.  Max 32 characters."
fit_content = true

[node name="startButton" type="TextureButton" parent="TopUI"]
texture_filter = 1
layout_mode = 0
offset_left = 436.0
offset_top = 460.0
offset_right = 564.0
offset_bottom = 502.0
scale = Vector2(2, 2)
texture_normal = ExtResource("9_tlx5v")
texture_pressed = ExtResource("10_sfa8f")

[node name="jester" type="Sprite2D" parent="."]
position = Vector2(868, 926)
scale = Vector2(2, 2)
texture = ExtResource("10_nhpvw")

[connection signal="pressed" from="BottomUI/finishButton" to="." method="_on_finish_button_pressed"]
[connection signal="pressed" from="TopUI/startButton" to="." method="_on_start_button_pressed"]
